      the repository instead of built internally by the repository.
      (CNY-2034)
    * An issue that was preventing the repository server, under certain
      circumstances, to determine the proper URL to use has been fixed.
      (CNY-2056, CNY-2058)
    * External entitlement servers can now specify per-entitlement
      timeouts and automatic retry values. (CNY-2060)

  o Client Changes:
    * A bug which prevented the mirror client from using hidden commits
      when mirroring to a single target has been fixed. (CNY-1981)
    * diff and patch now support files without trailing newlines.
      (CNY-1979)

Changes in 1.1.31.4:
  o Server changes:
    * Setting "forceSSL" once again requires a HTTPS connection be
      used when authentication data is passed to an Apache based
      Conary Repository. (CNY-1880)
    * A bug that caused incorrect values for sourceItemId and
      clonedFromId to be used when groups and components were
      committed as part of one changeset has been fixed. (CNY-1903)
    * A bug that caused the Latest table to be rebuilt incorrectly
      when migrating to schema version 15.0 has been fixed.
      (CNY-1909)

  o Client changes:
    * Large files are now compressed on disk instead of in memory when
      creating rollbacks. (CNY-1896)

Changes in 1.1.31.3:
  o Server changes:
    * Added EntitlementTimeout exception to notify clients that an
      entitlement has timed out from the authentication cache (CNY-1862)
    * Added remote_ip to user and entitlement based external authentication
      checks (CNY-1864)
    * Fixed bug in proxy which prevented remote_ip from being passed to
      internal repository

  o Client changes:
    * Reread entitlements from disk when EntitlementTimeout is received
      (CNY-1862)

  o Other changes:
    * Logcat now works for calls which passed lists of entitlements

Changes in 1.1.31.2:
  o Proxy changes:
    * Proxy can now inject entitlements and user authentication on behalf